--- a/main2.css
+++ b/main2.css
@@ -2,7 +2,8 @@ body {
     font-family: "Avenir Next";
     background-color: #f2f2ee;
     height: auto;
-
+    padding-left: 20px;
+    
     
 }
 
@@ -10,7 +11,9 @@ li{
     list-style: none;
 }
 
-
+p{
+    padding-left: 60px;
+}
 .header{
     background-color: #54a1d9;
     color: #f1deb5;
@@ -54,7 +57,7 @@ li{
 }
 
 .contents-logo p{
-    padding-left: 65px;
+    padding-left: 70px;
     font-size: 36px;
     font-family:fantasy;
     color: #50aa88;
@@ -65,7 +68,7 @@ li{
 .form-logo{
     clear:both;
     font-size: 60px;
-    padding: 30px 80px;
+    padding: 20px 80px;
     font-family: fantasy;
     color: #50aa88;
 }
